--- a/ProjektZTP/Views/Home/Index.cshtml
+++ b/ProjektZTP/Views/Home/Index.cshtml
@@ -3,10 +3,11 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Quizlet</h1>
+    <p class="lead">Aplikacja do nauki słówek w języku polskim oraz angielskim</p>
 </div>
+
+<p>@Html.ActionLink("Start learning", "Index", "Quiz", new { mode = "learning"}, new { @class = "btn btn-success"})</p>
 
 <div class="row">
     <div class="col-md-4">
