--- a/ProjektZTP/Views/Shared/_Layout.cshtml
+++ b/ProjektZTP/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Informacje", "About", "Home")</li>
                     <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Words", "Index", "Words", new { area = "" }, new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("Words", "Index", "Words", new { pageNumber = 1, filterValue = "", filterLang = "" }, new { @class = "" })</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
