--- a/ProjektZTP/Views/Words/Delete.cshtml
+++ b/ProjektZTP/Views/Words/Delete.cshtml
@@ -8,33 +8,16 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Word</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.WordEn)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.WordEn)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.WordPl)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.WordPl)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm("DeleteWord", "Words", FormMethod.Get))
+    {
+        <input name="id" type="hidden" value="@Model.Id" />
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("No", "Index", new { pageNumber = 1, filterValue = "", filterLang = "" }, new { @class = "btn btn-danger" })
+            <input type="submit" value="Yes" class="btn btn-success" />
         </div>
     }
 </div>
