--- a/ProjektZTP/Views/Words/Index.cshtml
+++ b/ProjektZTP/Views/Words/Index.cshtml
@@ -66,7 +66,7 @@
                         @Html.DisplayFor(modelItem => item.WordPl)
                     </td>
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-success" })&nbsp;
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id, wordEn = item.WordEn, wordPl = item.WordPl }, new { @class = "btn btn-success" })&nbsp;
                         @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
                     </td>
                 </tr>
