--- a/ProjektZTP/Views/Home/Index.cshtml
+++ b/ProjektZTP/Views/Home/Index.cshtml
@@ -3,29 +3,25 @@
 }
 
 <div class="jumbotron">
-    <h1>Quizlet</h1>
-    <p class="lead">Aplikacja do nauki słówek w języku polskim oraz angielskim</p>
+    <h1>Find the right exam for you</h1>
+    <p class="lead">Learn languages with us. It's free and it gives you an oportunity to not be a retard anymore.</p>
 </div>
-<p>@Html.ActionLink("Start learning", "Index", "Quiz", new { mode = "learning" }, new { @class = "btn btn-success" })</p>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
+    <div class="col-md-6">
+        <h2>Learning mode</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Don't know Polish/English? Just learn it in a very fast way!
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p>
+            @Html.ActionLink("Begin test", "SelectDifficulty", "Quiz", new { mode = "learning" }, new { @class = "btn btn-success" })
+        </p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-6">
+        <h2>Test mode</h2>
+        <p>Test your mad skills.</p>
+        <p>
+            @Html.ActionLink("Begin test", "SelectDifficulty", "Quiz", new { mode = "test" }, new { @class = "btn btn-success" })
+        </p>
     </div>
 </div>
