--- a/ProjektZTP/Views/Manage/Index.cshtml
+++ b/ProjektZTP/Views/Manage/Index.cshtml
@@ -10,16 +10,20 @@
     <h4>Zmień ustawienia konta</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>Punkty:</dt>
+        <dd>@ViewBag.Score</dd>
+        <dt>Poziom:</dt>
+        <dd>@ViewBag.Level</dd>
         <dt>Hasło:</dt>
         <dd>
             [
             @if (Model.HasPassword)
             {
-            @Html.ActionLink("Zmień hasło", "ChangePassword")
+                @Html.ActionLink("Zmień hasło", "ChangePassword")
             }
             else
             {
-            @Html.ActionLink("Utwórz", "SetPassword")
+                @Html.ActionLink("Utwórz", "SetPassword")
             }
             ]
         </dd>
@@ -29,32 +33,32 @@
             @Html.ActionLink("Zarządzaj", "ManageLogins") ]
         </dd>
         @*
-            Numery telefonów mogą być używane jako drugi składnik w systemach uwierzytelniania dwuskładnikowego.
+        Numery telefonów mogą być używane jako drugi składnik w systemach uwierzytelniania dwuskładnikowego.
 
-             Zobacz <a href="https://go.microsoft.com/fwlink/?LinkId=403804">ten artykuł</a>,
-                        aby uzyskać szczegółowe informacje na temat konfigurowania tej aplikacji ASP.NET pod kątem obsługi uwierzytelniania dwuskładnikowego przy użyciu wiadomości SMS.
+         Zobacz <a href="https://go.microsoft.com/fwlink/?LinkId=403804">ten artykuł</a>,
+                    aby uzyskać szczegółowe informacje na temat konfigurowania tej aplikacji ASP.NET pod kątem obsługi uwierzytelniania dwuskładnikowego przy użyciu wiadomości SMS.
 
-             Usuń komentarz z następującego bloku po skonfigurowaniu uwierzytelniania dwuskładnikowego
+         Usuń komentarz z następującego bloku po skonfigurowaniu uwierzytelniania dwuskładnikowego
         *@
         @*
-            <dt>Numer telefonu:</dt>
-            <dd>
-                @(Model.PhoneNumber ?? "None")
-                @if (Model.PhoneNumber != null)
+        <dt>Numer telefonu:</dt>
+        <dd>
+            @(Model.PhoneNumber ?? "None")
+            @if (Model.PhoneNumber != null)
+            {
+                <br />
+                <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
+                using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
-                    <br />
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
-                    using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>[<input type="submit" value="Usuń" class="btn-link" />]</text>
-                    }
+                    @Html.AntiForgeryToken()
+                    <text>[<input type="submit" value="Usuń" class="btn-link" />]</text>
                 }
-                else
-                {
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
-                }
-            </dd>
+            }
+            else
+            {
+                <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
+            }
+        </dd>
         *@
         <dt>Uwierzytelnianie dwuetapowe:</dt>
         <dd>
@@ -63,25 +67,25 @@
                 aby uzyskać szczegółowe informacje na temat konfigurowania tej aplikacji ASP.NET pod kątem obsługi uwierzytelniania dwuskładnikowego.
             </p>
             @*@if (Model.TwoFactor)
+            {
+                using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
-                    using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>Włączone
-                        <input type="submit" value="Wyłącz" class="btn btn-link" />
-                        </text>
-                    }
+                    @Html.AntiForgeryToken()
+                    <text>Włączone
+                    <input type="submit" value="Wyłącz" class="btn btn-link" />
+                    </text>
                 }
-                else
+            }
+            else
+            {
+                using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
-                    using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>Wyłączone
-                        <input type="submit" value="Włącz" class="btn btn-link" />
-                        </text>
-                    }
-                }*@
+                    @Html.AntiForgeryToken()
+                    <text>Wyłączone
+                    <input type="submit" value="Włącz" class="btn btn-link" />
+                    </text>
+                }
+            }*@
         </dd>
     </dl>
 </div>
